--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
   <!-- font awesome -->
   <link rel="stylesheet" href="css/all.css">
   <title>consultancy Project</title>
-  <style>
-  </style>
-  
+  <link rel="shortcut icon" href="img/logo.png">
+
+
 </head>
 
 <body>
   <header id="header">
     <nav class="navbar navbar-expand-lg px-4">
         
-            <img class="logo" src="img/logo.PNG" alt = "main icon">
+            <img class="logo" src="img/logo.png" alt = "main icon">
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target= '#myNavbar'>
                 <span class="toggler-icon">
                     <i class="fas fa-bars"></i>
